--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,24 @@
     
 }
 
+.dropdown li{
+  display: block;
+}
+ul li ul.dropdown{
+
+  position: absolute;
+  z-index: 999;
+  background-color: rgba(212, 212, 212, 0.446);
+  width: 10%;
+  display: none;
+}
+.dropdown li a{
+padding: 500px;
+}
+ul li:hover ul.dropdown{
+  display: block;
+}
+
 .nav-right{
     display: flex;
     justify-content: end;
@@ -75,6 +93,17 @@
     display: flex;
     justify-content: end;
     font-size: 1rem;
+   
+}
+.nav-right p{
+    
+    padding-top: .5%;
+    padding-right: 5%;
+    width: 75%;
+
+    display: flex;
+    justify-content: end;
+    font-size: 1.4rem;
    
 }
 .nav-right h2:hover{
